--- a/ToDoList/Views/Task/Index.cshtml
+++ b/ToDoList/Views/Task/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model ToDoList.Models.CategoryViewModel
+﻿@model ToDoList.Models.TaskViewModel
 
 <h1 class="mb-3 text-center">Створення задачі</h1>
 <form id="createTaskForm" method="post" action="/Task/Create">
