--- a/ToDoList/wwwroot/css/site.css
+++ b/ToDoList/wwwroot/css/site.css
@@ -1,3 +1,4 @@
+
 html {
   font-size: 14px;
 }
@@ -19,4 +20,16 @@ html {
 
 body {
   margin-bottom: 60px;
+}
+
+.deleteTask {
+  color: #ff0000; 
+}
+
+.deleteTask:hover {
+  color: #b30000; 
+}
+
+.completed-task {
+  text-decoration: line-through;
 }
