--- a/ToDoList/Views/Task/Index.cshtml
+++ b/ToDoList/Views/Task/Index.cshtml
@@ -32,7 +32,7 @@
 
     <div class="mb-3">
         <label class="form-label" for="CategoryId">Категорія задачі</label>
-        <select id="CategoryId" name="CategoryId" class="form-control">
+        <select id="CategoryId" name="CategoryId" class="form-select">
             @foreach (var category in Model.Categories)
             {
             <option value="@category.Key">@category.Value</option>
