--- a/to-do-list/src/index.css
+++ b/to-do-list/src/index.css
@@ -14,6 +14,11 @@ html {
     box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
 }
 
+.form-select-required {
+    border: 1px solid red; /* Наприклад, червона рамка */
+}
+
+
 html {
     position: relative;
     min-height: 100%;
